# rust-first-clazz

./: README.md
httpie/: Cargo.toml
httpie/src/: main.rs
ownership/src/: main.rs
queryer/: Cargo.toml
queryer/examples/: covid.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
scrape_url/: Cargo.toml
thumbor/: Cargo.toml  abi.proto  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
