[package]
name = "queryer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dialect"

[[example]]
name = "covid"

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
polars = { version = "0.15.1", features = ["json", "lazy"] }
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
sqlparser = "0.10.0"
tokio = { version = "1.11.0", features = ["fs"] }
tracing = "0.1.26"

[dev-dependencies]
tokio = {version = "1.11.0", features = ["full"]}
tracing-subscriber = "0.2.20"
