[package]
name = "thumbor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
axum = "0.2.3"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.23.14"
lazy_static = "1.4.0"
lru = "0.6.6"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.8.0"
reqwest = "0.11.4"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
tower = { version = "0.4.8", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.1.1", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"

[build-dependencies]
prost-build = "0.8.0"
